5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1800_2566.log
== TEST (2019-06-06 11:49:08) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		
#for x in pc:
print(pc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:59:10) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for x in pc:
pc[x] = pc[x]*1000/10

-- ERROR:
File "XXXX", line 20
    pc[x] = pc[x]*1000/10
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:59:44) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for x in pc:
	pc[x] = pc[x]*1000/10
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:01:07) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(pc(size)):
	pc[i] = pc[i]*1000/10
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:02:21) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = pc[i]*1000/10
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:02:36) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = pc[i]*100/10
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:03:08) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = pc[i]*100/10
print(round(pc), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:03:55) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] =round( pc[i]*100/10, 2)
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:04:24) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] =round( pc[i]*100/10,2)
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:04:43) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] =round( pc[i]*100/10,2)
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:06:07) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	media = sum(pc)/size(pc)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:25:19) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=int)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	media = sum(pc)/100
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:57) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=float)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = round(sum(pc)/100, 1)
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:32:12) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=float)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = round(pc[i]/size(ft)*100, 1)
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:32:25) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=float)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = round(pc[i]/size(ft)*100, 1)
print(pc)
-- EXECUTION TIME:
1.29673
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:33:10) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=float)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = round(pc[i]/size(ft)*100, 1)
print(pc)
-- EXECUTION TIME:
1.24769
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:33:13) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=float)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = round(pc[i]/size(ft)*100, 1)
print(pc)
-- EXECUTION TIME:
2.21876
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 08:50:23) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=float)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = round(pc[i]/size(ft)*100, 1)
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 08:50:42) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=float)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = round(pc[i]/size(ft)*100, 1)
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 08:51:15) 
-- CODE:
from numpy import*

ft = array(eval(input("numero de faltas: ")))
pc = zeros(6, dtype=float)
for i in range(size(ft)):
	if ft[i]==2:
		pc[0]=pc[0]+1
	elif ft[i]==3 :
		pc[1] = pc[1]+1
	elif ft[i]== 4:
		pc[2] = pc[2]+1
	elif ft[i]== 5:
		pc[3] = pc[3]+1
	elif ft[i]== 6:
		pc[4] = pc[4]+1
	elif ft[i]== 7 :
		pc[5] = pc[5]+1		

for i in range(6):
	pc[i] = round(pc[i]/size(ft)*100, 1)
print(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
